# mathix

./: .dockerignore  .gitattributes  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  test.Dockerfile
include/: float_t.h  scientific_constants.h
include/units/: angle.h  energy.h  length_cross.h  length_imperial.h  length_metric.h  mass_imperial.h  mass_metric.h  temperature.h  time.h  volume_imperial.h  volume_metric.h
source/: scientific_constants.c
source/units/: angle.c  energy.c  length_cross.c  length_imperial.c  length_metric.c  mass_imperial.c  mass_metric.c  temperature.c  time.c  volume_imperial.c  volume_metric.c
tests/: angle_test.c
tests/unity/: unity.c  unity.h
